@@ -61,21 +61,18 @@ a {
 .g-header, .g-header-popup {
     color: #fff;
     background-image:url(../images/backgrounds/header.png);
+    border-bottom: 1px solid #000;
+    margin-bottom: 2px;
 }
 
-/* The header */
-.panel .hd {
-	background-color: #66a;
-	color: #FFF;
-	font-weight: bold;
-	padding: 4px;
+.g-header {
+    height: 35px;
+    padding: 3px;
 }
 
 .g-header-popup {
-    border-bottom: 2px solid #000;
     height: 25px;
     padding: 5px;
-    margin-bottom: 1px;
 }
 
 .g-columnheader {
