@@ -1,3 +1,12 @@
+2006-11-05 Jens Tkotz <jens@peino.de> 1.6-alpha3-svn-b9
+
+ * Fix: Clicking as non admin on a (sub-)album that needs upgrade failed.
+
+ * Change: make page header a little heigher.
+
+ * Change: If less then 2 item option in thumbs view,
+	   then only icons are showed.
+
 2006-11-03 Jens Tkotz <jens@peino.de> 1.6-alpha3-svn-b8
 
  * Change: RFE #983979
